assets/section-main-product.css
/* ... */
.product-parameters variant-selects .product-form__controls {
  width: 100%;
}
.product-parameters .dropdown-select {
  position: relative;
  display: block;
  width: 100%;
}
.product-parameters .dropdown-select__current {
  width: 100%;
  min-height: 4.4rem;
  padding: 0.7rem 1.2rem 0.7rem 1.6rem;
  -webkit-appearance: none;
  appearance: none;
  color: rgb(var(--color-foreground));
  border: 0.1rem solid rgb(var(--color-border));
  border-radius: min(var(--border-radius-input), 0.8rem);
  box-sizing: border-box;
  transition: border-color var(--duration-default);
  overflow: hidden;
  cursor: pointer;
  user-select: none;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 0.6rem;
  min-width: 13rem;
}
.product-parameters .dropdown-select__current:hover {
  border-color: rgb(var(--color-foreground));
}
.product-parameters .dropdown-select__current:focus {
  border-color: rgb(var(--color-foreground));
}
.product-parameters .dropdown-select__current:focus-visible, .product-parameters .dropdown-select__current:focus {
  outline: none;
}
.product-parameters .dropdown-select__current > div {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 0.2rem;
}
.product-parameters .dropdown-select__current span {
  white-space: nowrap;
}
.product-parameters .dropdown-select__current--with-color [data-dropdown-current-value] {
  position: relative;
  display: flex;
  align-items: center;
  gap: 0.4rem;
}
.product-parameters .dropdown-select__current--with-color [data-dropdown-current-value]::before {
  content: "";
  position: static;
  display: inline-block;
  width: 0.8rem;
  height: 0.8rem;
  background: var(--swatch-color);
  border: 0.1rem solid rgba(var(--color-foreground), 0.1);
}
.product-parameters .dropdown-select__current .icon-caret {
  position: static;
  transform: none;
  top: unset;
  right: unset;
}
.product-parameters .dropdown-select__options {
  position: absolute;
  width: 100%;
  z-index: 11;
  display: none;
  border: 0.1rem solid rgb(var(--color-border));
  border-radius: min(var(--border-radius-input), 0.8rem);
  background-color: rgb(var(--color-background));
  color: rgb(var(--color-foreground));
  padding: 0 !important;
  overflow: hidden;
  margin-top: 0.4rem;
}
.product-parameters .dropdown-select__options.active {
  display: block;
}
.product-parameters .dropdown-select ul {
  max-height: 30rem;
  overflow-y: auto;
  overscroll-behavior: contain;
  background: rgb(var(--color-background));
  box-sizing: border-box;
  list-style: none;
  padding: 0 !important;
  display: block;
  width: 100%;
  transform: translate3d(0, 0, 0);
}
.product-parameters .dropdown-select ul::-webkit-scrollbar {
  width: 0.3rem;
  height: 0.3rem;
}
.product-parameters .dropdown-select ul::-webkit-scrollbar-thumb {
  background-color: rgba(var(--color-foreground), 0.2);
  border-radius: 2rem;
}
.product-parameters .dropdown-select ul li label {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 0.8rem;
  padding: 0.9rem 1.2rem 0.9rem 1.6rem;
  text-decoration: none;
  line-height: 1.3;
  border-radius: 0;
  border: none;
  color: rgb(var(--color-foreground));
  background-color: rgb(var(--color-background));
  transition: background-color var(--duration-default);
}
.product-parameters .dropdown-select ul li label .icon-check {
  display: none;
  width: 1.8rem;
  height: 1.8rem;
  flex-shrink: 0;
  position: static;
  transform: none;
  top: unset;
  right: unset;
}
@media screen and (hover: hover) and (pointer: fine) {
  .product-parameters .dropdown-select ul li label:hover {
    border: none !important;
    color: rgb(var(--color-foreground)) !important;
    background-color: rgb(var(--color-background-secondary)) !important;
  }
}
.product-parameters .dropdown-select ul li input:checked + label {
  border: none;
  color: rgba(var(--color-foreground));
  background-color: rgb(var(--color-background-secondary));
  pointer-events: none;
}
.product-parameters .dropdown-select ul li input:checked + label .icon-check {
  display: block;
}
.product-parameters .dropdown-select ul li input:focus-visible + label {
  outline: 0.1rem solid rgba(var(--color-foreground), 0.5);
  outline-offset: -0.1rem;
}
.product-parameters .dropdown-select .select-label {
  font-family: var(--font-body-family);
  font-style: var(--font-body-style);
  font-size: calc(var(--font-body-scale) * 1.4rem);
  font-weight: var(--font-body-weight);
  line-height: var(--font-body-line-height);
  letter-spacing: calc(var(--font-body-letter-spacing) * 0.1);
  text-transform: none;
  word-break: break-word;
}
.product-parameters .dropdown-select .select-label--color {
  position: relative;
  display: flex;
  align-items: center;
  gap: 0.4rem;
}
.product-parameters .dropdown-select .select-label--color::before {
  content: "";
  position: static;
  display: inline-block;
  width: 0.8rem;
  height: 0.8rem;
  background: var(--swatch-color);
  border: 0.1rem solid rgba(var(--color-foreground), 0.1);
}
.product-parameters + .product__buy-buttons {
  padding-top: 0;
}
.product-parameters + .product-extra-option {
  margin-top: 0;
}
.no-js .product-parameters .select {
  width: 100%;
  position: relative;
}
.no-js .product-parameters .select__select {
  width: 100%;
  min-height: 4.4rem;
  padding: 0.7rem 1.2rem;
  font-family: var(--font-body-family);
  font-style: var(--font-body-style);
  font-size: 1.2rem;
  -webkit-appearance: none;
  appearance: none;
  color: rgb(var(--color-foreground-title));
  border: 0.1rem solid rgb(var(--color-border));
  border-radius: min(var(--border-radius-input), 0.8rem);
  box-sizing: border-box;
  transition: border-color var(--duration-default);
  overflow: hidden;
  cursor: pointer;
}
.no-js .product-parameters .select__select::placeholder {
  transition: color var(--duration-default);
  color: rgba(var(--color-foreground-secondary));
}
/* ... */

